syntax = "proto3";

package components;

option go_package = "/components";

import "google/protobuf/timestamp.proto";

message RouteDetails {
  string destinationName = 1;
  google.protobuf.Timestamp estimatedArrivalTime = 2;
}
